--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -25,14 +25,14 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Devdactic Media Popover</h1>
+        <h1 class="title">Bienal 2016</h1>
       </ion-header-bar>
       <ion-content class="has-header padding" ng-controller="MediaCtrl">
           <br><br>
 
         <div class="item item-divider">
             <i class="ion-images"></i>
-            My Images
+            Imagenes de las obras
         </div>
 
         <a class="item item-list-detail">
@@ -40,11 +40,6 @@
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
         </a>
-
-        <br><br>
-        <div class="button-bar">
-        <button class="button button-outline button-positive" ng-click="playVideo()">Play a video</button>
-    </div>
       </ion-content>
     </ion-pane>
   </body>
