--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -25,7 +25,7 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">12° Bienal de Arte Joven UNL</h1>
+        <h1 class="title"> <img src="img/logo-app.png" style="width: 30px; height: 30px;">12° Bienal de Arte Joven UNL</h1>
       </ion-header-bar>
       <ion-content class="has-header padding" ng-controller="MediaCtrl">
           <br><br>
