--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -40,6 +40,9 @@
                 <img ng-repeat="image in allImages" ng-src="{{image.src}}" ng-click="showImages($index)" class="image-list-thumb"/>
             </ion-scroll>
         </a>
+        <div class="spacer" style="height: 100px;"></div>
+        <div class="spacer" style="height: 100px;"></div>
+        <img src="img/pie-de-pagina.png" style="position: bottom; width: 100%"/>
       </ion-content>
     </ion-pane>
   </body>
