header, footer, y galeria

--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -25,10 +25,9 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title"> <img src="img/logo-app.png" style="width: 30px; height: 30px;">12° Bienal de Arte Joven UNL</h1>
+        <h1 class="title"> <img src="img/logo-app.png" style="width: 30px; height: 30px; position: botton;">12° Bienal de Arte Joven UNL</h1>
       </ion-header-bar>
       <ion-content class="has-header padding" ng-controller="MediaCtrl">
-          <br><br>
 
         <div class="item item-divider">
             <i class="ion-images"></i>
@@ -42,7 +41,8 @@
         </a>
         <div class="spacer" style="height: 100px;"></div>
         <div class="spacer" style="height: 100px;"></div>
-        <img src="img/pie-de-pagina.png" style="position: bottom; width: 100%"/>
+        <div class="spacer" style="height: 100px;"></div>
+        <img class="footer" src="img/pie-de-pagina.png" style="position: bottom; width: 100%"/>
       </ion-content>
     </ion-pane>
   </body>
