cambios app Slides

--- a/Slides/www/index.html
+++ b/Slides/www/index.html
@@ -46,10 +46,10 @@
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
     <div>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
-        </ion-nav-bar>
-        <ion-nav-view></ion-nav-view>
+       <ion-header-bar class="bar-stable">
+        <h1 class="title"> <img src="img/logo-app.png" style="width: 30px; height: 30px; position: bottom;">12° Bienal de Arte Joven UNL</h1>
+      </ion-header-bar>
+        <ion-nav-view class="home.html"></ion-nav-view>
     </div>
 </div>
   </body>
