--- a/Bienal/www/index.html
+++ b/Bienal/www/index.html
@@ -22,6 +22,10 @@
         padding-top:0px !important;
       }
     </style>
+    <style>
+      @import 'https://fonts.googleapis.com/css?family=Libre+Franklin:400,700';
+    </style>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
