--- a/Bienal/www/index.html
+++ b/Bienal/www/index.html
@@ -33,17 +33,15 @@
     <script src="js/directives.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
-  <div>
+          <div>
         <div>
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar-dark">
             <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
-    </div>
+        </div>
     
     <div>
       <ion-footer-bar>
